# fast_api_study

./: LICENSE  config.py  conftest.py  constants.py  main.py  pyproject.toml  schemas.py  storage.py  test_api_post.py
api/: api_films.py
templates/: base.html  main_page.html  movie_page.html  not_found.html  search_page.html
web/: web_films.py
