[tool.poetry]
name = "fast-api-study"
version = "0.1.0"
description = ""
authors = ["“IhorKrykent” <“igor.krikent.3006@gmail.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.108.0"}
requests = "^2.31.0"
pymongo = "^4.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
